@@ -2864,3 +2864,34 @@ col16 gorovitscopyoflenin::GetMaterialColorB(int) const
 {
   return MakeRGB16(30, 30, 30);
 }
+
+bool firstbornchild::SpecialOfferEffect(int GodNumber) {
+  god* Receiver = game::GetGod(GodNumber);
+  Receiver->AdjustRelation(2000); // to the max
+
+  int AmountOfAngelAppears = false;
+  for(int c = 0; c < 10; ++c) {
+    character* Angel = Receiver->CreateAngel(PLAYER->GetTeam(), 1000); 
+    if(Angel) 
+    {
+      ++AmountOfAngelAppears;
+    }
+  }
+
+  if(AmountOfAngelAppears == 0) {
+    ADD_MESSAGE("You sacrifice %s. %s is very pleased.", 
+		CHAR_NAME(DEFINITE), Receiver->GetName());
+  } 
+  else if(AmountOfAngelAppears == 1) {
+    ADD_MESSAGE("You sacrifice %s. %s is very pleased. An angel appears! ", 
+		CHAR_NAME(DEFINITE), Receiver->GetName());
+  } 
+  else {
+    ADD_MESSAGE("You sacrifice %s. %s is very pleased. An army of angels appears! ", 
+		CHAR_NAME(DEFINITE), Receiver->GetName());
+  }
+
+  return true;
+}
+
+col16 firstbornchild::GetMaterialColorB(int) const { return MakeRGB16(160, 160, 160); }
