@@ -6,7 +6,10 @@
  totally. The file is provided AS IS and is probably completely unreadable.
 
 -----------------------------------------------------------------------------
+August 16 2006 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * Added first-born sons and daughters
+	
 August 16 2006 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
   * Added lots of new zombies, skeletons and ghosts
